--- a/package.json
+++ b/package.json
@@ -7,8 +7,15 @@
     "heroku-postbuild": "yarn build"
   },
   "dependencies": {
+    "auth0-js": "^9.7.3",
+    "auth0-lock": "^11.8.1",
+    "dotenv": "^6.0.0",
+    "jwt-decode": "^2.2.0",
     "next": "^6.1.1",
+    "prop-types": "^15.6.2",
     "react": "^16.4.2",
-    "react-dom": "^16.4.2"
+    "react-dom": "^16.4.2",
+    "styled-components": "^3.4.1",
+    "uuid": "^3.3.2"
   }
 }
